# avantdesigner

./: .env.local.example  .eslintrc.json  .gitignore  DOCKER.md  README.md  api_response.json  api_response_full.json  api_response_rag.json  api_response_risky.json  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  test_api.js  test_api.py  test_api_rag.py  test_api_risky.py  test_contract.json  test_e2e_complete.py  test_full.js  test_routes.js  test_semantic_rag.py  tsconfig.json
app/: globals.css  layout.tsx
docs/: DEVELOPMENT.md  PAY_PER_CONTRACT.md
public/logos/: README.md
python-ai/: .env.example  Dockerfile  README.md  TESTING.md  ai_models.py  debug_model_download.py  main.py  pipeline.py  pyproject.toml  pytest.ini  rag_service.py  rag_service_semantic.py  requirements.txt  test_backend_direct.py  test_ocr_direct.py  test_ocr_minimal.py  test_pipeline.py
python-ai/export/: __init__.py  pdf_generator.py
python-ai/export/templates/: report.html
python-ai/extraction/: ocr_cleaner.py  ocr_refiner.py  ocr_service.py
python-ai/knowledge/: contract_detector.py
python-ai/knowledge_base/: code_civil.md  code_travail.md  loi_89_462.md
python-ai/preprocessing/: __init__.py  chunker.py  cleaner.py
python-ai/rag_cache/: faiss.index
python-ai/tests/: test_chunker.py  test_cleaner.py  test_pipeline.py  test_validator.py
python-ai/utils/: __init__.py  validator.py
rag_cache/: embeddings.pkl
src/app/: globals.css  page.tsx
src/app/analyser/: page.tsx
src/components/analysis/: ScoreCard.tsx  (+3 more)
test_output/: analysis_result.json
(+40 files in other folders)
